--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,13 @@ hr {
 
 h1 {color: #A13941FF;}
 h2 {color: #A13941FF;}
-h3 {color: #A13941FF;}
+h3 {color: coral;}
 h4 {color: #A13941FF;}
 h5 {color: #A13941FF;}
 h6 {color: #A13941FF;}
 
 .p{
-    color: #353838;
+    color: #A13941FF;
 }
 .t1
 {
