--- a/css/style.css
+++ b/css/style.css
@@ -4,31 +4,10 @@
     text-decoration:none; 
     cursor: pointer;
   } */
-body {
+/***************************************************************Start**************************************************************************/  
+body{
     background-color: rgb(255, 255, 255)
-}
-
-/* a:link {
-    color: green;
-    background-color: transparent;
-    text-decoration:none;
   }
-  a:visited {
-    color: rgb(216, 139, 14);
-    background-color: transparent;
-    text-decoration: none;
-  }
-  a:hover {
-    color: red;
-    background-color: none;
-    text-decoration: underline;
-  }
-  a:active
-  {
-    color: rgb(18, 253, 218);
-    background-color: none;
-    text-decoration: underline;
-  } */
 hr {
     background-color: #F0E1B9FF;
     border-style: none;
@@ -38,14 +17,19 @@ hr {
 
 h1,h2,h4,h5,h6 {color: #A13941FF;}
 h3 {color: coral;}
-.p {
-    color: #A13941FF;
-}
+
 
 thead.t1 {
     color: navy;
 }
-
+/***************************************************************Class**************************************************************************/
+table.p {
+  color: #A13941FF;
+  text-shadow: #FC0 1px 0 10px;
+  text-decoration: underline;
+  /* margin-bottom: 100px; */
+  text-align: left;
+}
 .t2 {
     color: forestgreen;
 }
@@ -70,3 +54,30 @@ a.so:link {
     background-color: none;
     text-decoration: underline;
   }
+
+  /***************************************************************ID**************************************************************************/
+  #hp  {
+    float: inline-start
+     ;    
+     margin: 0 15px 0 0;
+     width: 130px;
+    }
+    #name
+    {
+      text-align: center;
+      padding: 10px 10px  10px  10px;
+      text-decoration: underline;
+      margin-top: 0px;
+      margin-bottom: 0px;
+      padding-top: 0px;
+
+    }
+    #social
+    {
+      text-align: center;
+      margin-top: 5%;
+    }
+    #bio
+    {
+      padding-top: 4%;
+    }
