change in id align and padding left

--- a/css/style.css
+++ b/css/style.css
@@ -64,13 +64,13 @@ a.so:link {
     }
     #name
     {
-      text-align: center;
-      padding: 10px 10px  10px  10px;
+      text-align: left;
+      padding: 10px 10px  10px  5px;
       text-decoration: underline;
       margin-top: 0px;
       margin-bottom: 0px;
       padding-top: 0px;
-
+      
     }
     #social
     {
