--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ a.so:link {
     }
     #name
     {
-      text-align: left;
+      text-align: center;
       padding: 10px 10px  10px  5px;
       text-decoration: underline;
       margin-top: 0px;
