--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
   } */
 /***************************************************************Start**************************************************************************/  
 body{
-    background-color: rgb(255, 255, 255)
+    background-color: #e0ebe8
   }
 hr {
     border-style: groove;
