--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
   } */
 /***************************************************************Start**************************************************************************/  
 body{
-    background-color: #e0ebe8
+    background-color: #E4F9F5
   }
 hr {
     border-style: groove;
